<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_nueva_categoria"
        android:textStyle="bold"
        android:textSize="18sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp">

        <EditText
            android:id="@+id/etNewCategory"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/et_nombre_categoria"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/btnSaveCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_crear"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#AAAAAA"
        android:layout_marginVertical="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_nueva_nota"
        android:textStyle="bold"
        android:textSize="18sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_select_categoria"
        android:layout_marginTop="10dp"/>

    <Spinner
        android:id="@+id/spinnerCategories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:id="@+id/etTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_titulo_nota"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/etContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_descripcion_nota"
        android:gravity="top"
        android:lines="5"/>

    <Button
        android:id="@+id/btnSaveNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_guardar_nota"
        android:layout_marginTop="16dp"/>

</LinearLayout>